--- a/P_1/index.html
+++ b/P_1/index.html
@@ -14,7 +14,7 @@
   <table class="month-table">
     <thead>
       <tr>
-        <th>День / Пара</th>
+        <th>Понеділок</th>
         <th>01.09.2025</th>
         <th>08.09.2025</th>
         <th>15.09.2025</th>
@@ -24,8 +24,8 @@
     </thead>
     <tbody>
       <!-- Monday -->
-      <tr>
-        <td class="day">Пн — 2 пара<br>09:45–11:20</td>
+        <tr>
+        <td class="day">1 пара<br>08:00–</td>
         <td class="lesson blue">ШІ-2017 [Лк]<br>Кисіль Т.М.<br>ауд. Дистанц.</td>
         <td class="lesson blue">ПРО-2017 [Лк]<br>Торошанко Я.І.</td>
         <td class="lesson yellow">ШП-2017 [Лк]<br>Кисіль Т.М.</td>
@@ -34,7 +34,16 @@
       </tr>
 
       <tr>
-        <td class="day">Пн — 3 пара<br>11:45–13:20</td>
+        <td class="day">2 пара<br>09:45–11:20</td>
+        <td class="lesson blue">ШІ-2017 [Лк]<br>Кисіль Т.М.<br>ауд. Дистанц.</td>
+        <td class="lesson blue">ПРО-2017 [Лк]<br>Торошанко Я.І.</td>
+        <td class="lesson yellow">ШП-2017 [Лк]<br>Кисіль Т.М.</td>
+        <td class="lesson yellow">ЗВВ-2017 [Лк]<br>Федоренко О.С.</td>
+        <td class="lesson blue">ШІ-2017 [Лк]<br>Кисіль Т.М.</td>
+      </tr>
+
+      <tr>
+        <td class="day">3 пара<br>11:45–13:20</td>
         <td class="lesson yellow">ХТ-15 [Лк]<br>Шикула О.М.<br>Дистанц.</td>
         <td class="empty"></td>
         <td class="lesson green">ПРО-2017 [Пз]<br>Торошанко Я.І.<br>Дистанц.</td>
@@ -43,7 +52,7 @@
       </tr>
 
       <tr>
-        <td class="day">Пн — 4 пара<br>13:30–15:05</td>
+        <td class="day">4 пара<br>13:30–15:05</td>
         <td class="empty"></td>
         <td class="lesson green">WEB тех-2016 [Пз]<br>Дзяба В.В.</td>
         <td class="empty"></td>
@@ -52,7 +61,7 @@
       </tr>
 
       <tr>
-        <td class="day">Пн — 5 пара<br>15:15–16:50</td>
+        <td class="day">5 пара<br>15:15–16:50</td>
         <td class="lesson green">ПРО-2017 [Пз]<br>Торошанко Я.І.</td>
         <td class="empty"></td>
         <td class="lesson blue">МЗШІ-2020 [Пз]<br>Зеногенродський О.С.</td>
@@ -60,19 +69,40 @@
         <td class="lesson green">ПРО-2017 [Пз]<br>Торошанко Я.І.</td>
       </tr>
 
+      <thead>
+      <tr>
+        <th>Вівторок</th>
+        <th>02.09.2025</th>
+        <th>09.09.2025</th>
+        <th>16.09.2025</th>
+        <th>23.09.2025</th>
+        <th>30.09.2025</th>
+      </tr>
+    </thead>
+
       <!-- Tuesday (showing first pair times) -->
       <tr>
-        <td class="day">Вт — 1 пара<br>08:00–09:35</td>
-        <td class="empty"></td>
-        <td class="empty"></td>
-        <td class="empty"></td>
-        <td class="empty"></td>
-        <td class="empty"></td>
+        <td class="day">Вихідний<br>08:00–09:35</td>
+        <td class="empty">Вихідний</td>
+        <td class="empty">Вихідний</td>
+        <td class="empty">Вихідний</td>
+        <td class="empty">Вихідний</td>
+        <td class="empty">Вихідний</td>
       </tr>
-
+      
+    <thead>
+      <tr>
+        <th>Середа</th>
+        <th>03.09.2025</th>
+        <th>10.09.2025</th>
+        <th>17.09.2025</th>
+        <th>24.09.2025</th>
+        <th>01.10.2025</th>
+      </tr>
+    </thead>
       <!-- Wednesday -->
       <tr>
-        <td class="day">Ср — 3 пара<br>11:45–13:20</td>
+        <td class="day">3 пара<br>11:45–13:20</td>
         <td class="lesson green">ПРО-2017 [Пз]<br>Торошанко Я.І.</td>
         <td class="lesson blue">ПРО-2017 [Лк]<br>Торошанко Я.І.</td>
         <td class="lesson green">ПРО-2017 [Пз]<br>Торошанко Я.І.</td>
@@ -89,6 +119,17 @@
         <td class="empty"></td>
       </tr>
 
+      <thead>
+      <tr>
+        <th>Четверг</th>
+        <th>04.09.2025</th>
+        <th>11.09.2025</th>
+        <th>18.09.2025</th>
+        <th>25.09.2025</th>
+        <th>02.10.2025</th>
+      </tr>
+    </thead>
+
       <!-- Thursday -->
       <tr>
         <td class="day">Чт — 2 пара<br>09:45–11:20</td>
@@ -99,6 +140,16 @@
         <td class="empty"></td>
       </tr>
 
+    <thead>
+      <tr>
+        <th>П'ятниця</th>
+        <th>05.09.2025</th>
+        <th>12.09.2025</th>
+        <th>19.09.2025</th>
+        <th>26.09.2025</th>
+        <th>03.10.2025</th>
+      </tr>
+    </thead>
       <!-- Friday -->
       <tr>
         <td class="day">Пт — 3 пара<br>11:45–13:20</td>
@@ -109,6 +160,16 @@
         <td class="empty"></td>
       </tr>
 
+    <thead>
+      <tr>
+        <th>Субота</th>
+        <th>06.09.2025</th>
+        <th>13.09.2025</th>
+        <th>20.09.2025</th>
+        <th>27.09.2025</th>
+        <th>04.10.2025</th>
+      </tr>
+    </thead>
       <!-- Saturday / Sunday: вихідні or sparse classes -->
       <tr>
         <td class="day">Сб — 1 пара<br>08:00–09:35</td>
@@ -118,6 +179,16 @@
         <td class="gray">Вихідний</td>
         <td class="gray">Вихідний</td>
       </tr>
+      <thead>
+      <tr>
+        <th>Неділя</th>
+        <th>07.09.2025</th>
+        <th>14.09.2025</th>
+        <th>21.09.2025</th>
+        <th>28.09.2025</th>
+        <th>05.10.2025</th>
+      </tr>
+    </thead>
       <tr>
         <td class="day">Нд — 1 пара<br>08:00–09:35</td>
         <td class="gray">Вихідний</td>
