--- a/P_1/index.html
+++ b/P_1/index.html
@@ -25,12 +25,12 @@
     <tbody>
       <!-- Monday -->
         <tr>
-        <td class="day">1 пара<br>08:00–</td>
-        <td class="lesson blue">ШІ-2017 [Лк]<br>Кисіль Т.М.<br>ауд. Дистанц.</td>
-        <td class="lesson blue">ПРО-2017 [Лк]<br>Торошанко Я.І.</td>
-        <td class="lesson yellow">ШП-2017 [Лк]<br>Кисіль Т.М.</td>
-        <td class="lesson yellow">ЗВВ-2017 [Лк]<br>Федоренко О.С.</td>
-        <td class="lesson blue">ШІ-2017 [Лк]<br>Кисіль Т.М.</td>
+        <td class="day">1 пара<br>08:00–9:35</td>
+        <td class="empty"></td>
+        <td class="empty"></td>
+        <td class="empty"></td>
+        <td class="empty"></td>
+        <td class="empty"></td>
       </tr>
 
       <tr>
@@ -69,6 +69,7 @@
         <td class="lesson green">ПРО-2017 [Пз]<br>Торошанко Я.І.</td>
       </tr>
 
+       <!-- Вівторок -->
       <thead>
       <tr>
         <th>Вівторок</th>
@@ -80,16 +81,16 @@
       </tr>
     </thead>
 
-      <!-- Tuesday (showing first pair times) -->
       <tr>
-        <td class="day">Вихідний<br>08:00–09:35</td>
+        <td class="day">1 пара<br>08:00–09:35</td>
         <td class="empty">Вихідний</td>
         <td class="empty">Вихідний</td>
         <td class="empty">Вихідний</td>
         <td class="empty">Вихідний</td>
         <td class="empty">Вихідний</td>
       </tr>
-      
+
+      <!-- Wednesday -->
     <thead>
       <tr>
         <th>Середа</th>
@@ -100,7 +101,7 @@
         <th>01.10.2025</th>
       </tr>
     </thead>
-      <!-- Wednesday -->
+      
       <tr>
         <td class="day">3 пара<br>11:45–13:20</td>
         <td class="lesson green">ПРО-2017 [Пз]<br>Торошанко Я.І.</td>
@@ -118,7 +119,7 @@
         <td class="lesson blue">WEB тех-2016 [Пз]<br>Дзяба В.В.</td>
         <td class="empty"></td>
       </tr>
-
+      <!-- Thursday -->
       <thead>
       <tr>
         <th>Четверг</th>
@@ -130,7 +131,6 @@
       </tr>
     </thead>
 
-      <!-- Thursday -->
       <tr>
         <td class="day">Чт — 2 пара<br>09:45–11:20</td>
         <td class="empty"></td>
@@ -139,6 +139,8 @@
         <td class="lesson yellow">ХТ-15 [Лк]<br>Шикула О.М.</td>
         <td class="empty"></td>
       </tr>
+
+      <!-- Friday -->
 
     <thead>
       <tr>
@@ -150,7 +152,6 @@
         <th>03.10.2025</th>
       </tr>
     </thead>
-      <!-- Friday -->
       <tr>
         <td class="day">Пт — 3 пара<br>11:45–13:20</td>
         <td class="empty"></td>
@@ -159,6 +160,8 @@
         <td class="lesson green">МЗШІ-2020 [Пз]<br>Зеногенродський О.С.</td>
         <td class="empty"></td>
       </tr>
+
+    <!-- Saturday -->
 
     <thead>
       <tr>
@@ -170,15 +173,17 @@
         <th>04.10.2025</th>
       </tr>
     </thead>
-      <!-- Saturday / Sunday: вихідні or sparse classes -->
       <tr>
-        <td class="day">Сб — 1 пара<br>08:00–09:35</td>
+        <td class="day">1 пара<br>08:00–09:35</td>
         <td class="gray">Вихідний</td>
         <td class="gray">Вихідний</td>
         <td class="gray">Вихідний</td>
         <td class="gray">Вихідний</td>
         <td class="gray">Вихідний</td>
       </tr>
+
+     <!-- Sunday -->
+
       <thead>
       <tr>
         <th>Неділя</th>
@@ -190,7 +195,7 @@
       </tr>
     </thead>
       <tr>
-        <td class="day">Нд — 1 пара<br>08:00–09:35</td>
+        <td class="day">1 пара<br>08:00–09:35</td>
         <td class="gray">Вихідний</td>
         <td class="gray">Вихідний</td>
         <td class="gray">Вихідний</td>
