--- a/P_1/index.html
+++ b/P_1/index.html
@@ -213,7 +213,7 @@
       <div class="item"><span class="box blue"></span> Лабораторна</div>
       <div class="item"><span class="box gray"></span> Вихідний</div>
     </div>
-    <p class="note">Цей місячний розклад заповнено на вересень 2025 згідно із прикріпленим зображенням. Щоб змінити пару — відредагуйте відповідну клітинку таблиці.</p>
+    <p class="note">Цей місячний розклад заповнено на вересень 2025.</p>
   </div>
 </body>
 </html>
