--- a/P_1/index.html
+++ b/P_1/index.html
@@ -2,15 +2,14 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Розклад занять — тиждень</title>
-  <!-- local stylesheet for this folder (filename intentionally matches file in P_1) -->
+  <title>Розклад занять на місяць</title>
   <link rel="stylesheet" href="slyle.css">
 </head>
 <body>
-  <h1>Розклад на тиждень</h1>
-  <h2>Розклад на вересень 2025 (тижні)</h2>
+  <h1>Розклад на місяць</h1>
+  <h2>Розклад на вересень 2025 (По тижням )</h2>
 
-  <!-- Month view: columns = тижні (01.09, 08.09, 15.09, 22.09, 29.09) -->
+  <!-- Колонки = тижні (01.09, 08.09, 15.09, 22.09, 29.09) -->
   <table class="month-table">
     <thead>
       <tr>
@@ -60,7 +59,7 @@
         <td class="lesson yellow">ПРО-2017 [Лк]<br>Торошанко Я.І.<br>ауд. Дистанц.</td>
       </tr>
 
-       <!-- Вівторок -->
+       <!-- Tuesday -->
       <thead>
       <tr>
         <th>Вівторок</th>
