--- a/P_1/index.html
+++ b/P_1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Розклад на місяць</h1>
-  <h2>Розклад на вересень 2025 (По тижням )</h2>
+  <h2>Розклад на вересень 2025</h2>
 
   <!-- Колонки = тижні (01.09, 08.09, 15.09, 22.09, 29.09) -->
   <table class="month-table">
