--- a/index.html
+++ b/index.html
@@ -49,12 +49,8 @@
       <h2>Лабораторні заняття</h2>
       <ul>
         <li>
-          <strong>Лабораторна 1:</strong> <a href="#">Базовий HTML</a>
-          <p>Опис: Практична робота з HTML-структурою.</p>
-        </li>
-        <li>
-          <strong>Лабораторна 2:</strong> <a href="#">Вступ до CSS</a>
-          <p>Опис: Підключення CSS та базове стилювання.</p>
+          <strong>Лабораторна 2:</strong> <a href="#">Вступ в html </a>
+          <p>Опис: Виконати список задач не редагуючи вихідний html файл.</p>
         </li>
       </ul>
     </section>
@@ -63,12 +59,12 @@
 
   <!-- Футер -->
   <footer>
-    <p>Контакт: ivan.petrenko@example.com</p>
+    <p>Контакт: bolkunchik04@gmail.com</p>
     <p>Соцмережі: 
-      <a href="https://github.com/ivanpetrenko" target="_blank">GitHub</a> | 
-      <a href="https://t.me/ivanpetrenko" target="_blank">Telegram</a>
+      <a href="https://github.com/st8120036" target="_blank">GitHub</a> | 
+      <a href="https://t.me/lov69wav" target="_blank">Telegram</a>
     </p>
-    <p>2023–2025. Університет ІТ</p>
+    <p>2023–2025. Університет ДУІКТ</p>
   </footer>
 
 </body>
