Копілот трай егейн

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Секція "Про мене" -->
     <section id="about">
       <h2>Про мене</h2>
-      <img src="photo_of_denis.jpg" alt="Болкун Денис">
+  <img class="profile" src="photo_of_denis.jpg" alt="Болкун Денис">
       <p><strong>Ім'я:</strong> Болкун Денис</p>
       <p><strong>Email:</strong> st8120036@stud.duikt.edu.ua</p>
 <p>Я студент групи КІД-42, який вивчає структуру будування сайту </p>
