--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <ul>
         <li><a href="#">Головна</a></li>
         <li><a href="#about">Про мене</a></li>
-        <li><a href="#practical">Практичні роботи</a></li>
         <li><a href="#labs">Лабораторні заняття</a></li>
       </ul>
     </nav>
@@ -32,25 +31,17 @@
 <p>Я студент групи КІД-42, який вивчає структуру будування сайту </p>
     </section>
 
-    <!-- Секція "Практичні роботи" -->
-    <section id="practical">
-      <h2>Практичні роботи</h2>
+    <!-- Секція "Лабораторні роботи" -->
+    <section id="labs">
+      <h2>Лабораторні роботи</h2>
       <ul>
         <li>
-        <strong>Практична робота №1:</strong> <a href="P_1/index.html">Розклад завдань</a>
+        <strong>Лабораторна робота №1:</strong> <a href="P_1/index.html">Розклад завдань</a>
           <p>Опис: Практична робота з розкладом занять.</p>
         </li>
-
-      </ul>
-    </section>
-
-    <!-- Секція "Лабораторні заняття" -->
-    <section id="labs">
-      <h2>Лабораторні заняття</h2>
-      <ul>
         <li>
-          <strong>Лабораторна 2:</strong> <a href="#">Вступ в html </a>
-          <p>Опис: Виконати список задач не редагуючи вихідний html файл.</p>
+        <strong>Лабораторна робота №2:</strong> <a href="P_2/lab2.html">Основи css</a>
+          <p>Опис: Лабораторна робота в якій ми навчимося візуально міняти стилі на нашому сайті.</p>
         </li>
       </ul>
     </section>
