--- a/P_2/lab2.html
+++ b/P_2/lab2.html
@@ -28,20 +28,39 @@
         <div class="box">
             <p>Цей абзац знаходиться в коробці.</p>
         </div>
-        <form>
-            <label for="input1">Поле введення 1:</label>
-            <input type="text" id="input1">
-            <label for="input2">Поле введення 2:</label>
-            <input type="text" id="input2" disabled>
-            <label for="email1">Email:</label>
-            <input type="email" id="email1">
-            <label for="input3">Поле введення 3:</label>
-            <input type="text" id="input3">
-            <label for="check1">Чекбокс 1:</label>
-            <input type="checkbox" id="check1">
-            <label for="check2">Чекбокс 2:</label>
-            <input type="checkbox" id="check2">
-        </form>
+        <!-- Форма webhook -->
+    <form action="https://webhook.site/9164df17-e684-4ec1-a0aa-fb1fba9201d7" method="post">
+
+    <!-- Форма -->
+    <label for="fname">Ім’я</label>
+        <input type="text" id="firstname" name="first_name" required>
+
+    <label for="lname">Прізвище</label>
+        <input type="text" id="lastname" name="last_name" required>
+
+    <label for="email">Електронна пошта</label>
+        <input type="email" id="email" name="email" required>
+
+    <label for="password">Пароль</label>
+        <input type="password" id="password" name="password" required>
+
+    <label for="confirm_password">Підтвердження паролю</label>
+        <input type="password" id="conf_password" name="confirm_password" required>
+
+    <label for="dob">Дата народження</label>
+        <input type="date" id="birth" name="birth_date">
+
+    <label for="gender">Стать</label>
+        <select id="gender" name="gender">
+            <option value="">Оберіть</option>
+            <option value="male">Чоловіча</option>
+            <option value="female">Жіноча</option>
+        </select>
+
+    <input type="submit" value="Відправити">
+
+    </form>
+
     </div>
     <section>
         <h2>Додатковий розділ</h2>
