--- a/P_8/index.html
+++ b/P_8/index.html
@@ -31,7 +31,7 @@
 
         <section id="about" class="section-about">
           <div class="profile-photo-container">
-            <img class="profile-photo" src="photo_of_denis.jpg" alt="Болкун Денис">
+            <img class="profile-photo" src="photo" alt="Болкун Денис">
           </div>
           <div class="profile-info">
             <h2>Болкун Денис</h2>
@@ -50,19 +50,12 @@
 
         <section id="labs" class="section-work work-block-2">
           <div class="work-text">
-            <h3>Практична робота№ 2</h3>
+            <h3>Лабораторна 2</h3>
             <p>Виконати список задач не редагуючи вихідний html файл.</p>
           </div>
           <a href="P_2/lab2.html" class="work-button">Робота з css</a>
         </section>
 
-        <section id="labs" class="section-work work-block-2">
-          <div class="work-text">
-            <h3>Практична робота№ 5</h3>
-            <p>Portfolio UI - Web& Mobile – Figma</p>
-          </div>
-          <a href="P_5/index.html" class="work-button">Допрацювання головної сторінки сайту відповідно до шаблону</a>
-        </section>
       </main>
     </div>
   </div>
