Головна сторінка редакт

--- a/index.html
+++ b/index.html
@@ -55,14 +55,46 @@
           </div>
           <a href="P_2/lab2.html" class="work-button">Робота з css</a>
         </section>
+        
+        <section id="labs" class="section-work work-block-2">
+          <div class="work-text">
+            <h3>Практична робота№ 3</h3>
+            <p>Структура головної сторінки YouTube використовуючи FlexBox.</p>
+          </div>
+          <a href="P_3/index.html" class="work-button">YouTube</a>
+        </section>
+
+        <section id="labs" class="section-work work-block-2">
+          <div class="work-text">
+            <h3>Практична робота№ 4</h3>
+            <p>Використовуючи шаблон розробити веб-сторінку у вигляді Fullsize клавіатури</p>
+          </div>
+          <a href="P_4/index.html" class="work-button">Fullsize клавіатура </a>
+        </section>
 
         <section id="labs" class="section-work work-block-2">
           <div class="work-text">
             <h3>Практична робота№ 5</h3>
-            <p>Portfolio UI - Web& Mobile – Figma</p>
+            <p>Допрацювання головної сторінки сайту відповідно до шаблону</p>
           </div>
-          <a href="P_5/index.html" class="work-button">Допрацювання головної сторінки сайту відповідно до шаблону</a>
+          <a href="P_5/index.html" class="work-button">Web& Mobile – Figma</a>
         </section>
+        
+        <section id="labs" class="section-work work-block-2">
+          <div class="work-text">
+            <h3>Практична робота№ 7</h3>
+            <p>Методологія BEM</p>
+          </div>
+          <a href="P_7/index.html" class="work-button">Створити всі стилі з 0, враховуючи їх розміщення по BEM.</a>
+        </section> 
+        <section id="labs" class="section-work work-block-2">
+          <div class="work-text">
+            <h3>Практична робота№ 8</h3>
+            <p>Допрацювання головної сторінки сайту відповідно до шаблону Portfolio UI - Web& Mobile – Figma </p>
+          </div>
+          <a href="P_8/index.html" class="work-button">(Допрацювання ПР№5)</a>
+        </section>
+
       </main>
     </div>
   </div>
