Виправлення помилок №3 та №8

--- a/P_3/index.html
+++ b/P_3/index.html
@@ -27,7 +27,9 @@
         <div class="header-right">
             <i class="material-icons">video_call</i>
             <i class="material-icons">notifications</i>
-            <div class="user-avatar">В</div>
+            <div class="user-avatar">
+                <img src="https://yt3.ggpht.com/yti/ANjgQV8G6UWEtZIV9-Aoc7wdnoG2TlgBo4Ai1Ou5HIxzKX5H9A=s88-c-k-c0x00ffffff-no-rj" alt="User Avatar">
+            </div>
         </div>
     </header>
 
@@ -58,11 +60,13 @@
                 
                 <div class="video-card">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/320x180/000000/FFFFFF?text=Економічна+Правда" alt="Preview">
+                        <img src="https://i.ytimg.com/vi/Ad6A1F1PI8A/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLCQfmRc54qSLBWge4gUZF6TAbw6vA" alt="Preview">
                         <span class="duration">12:30</span>
                     </div>
                     <div class="video-info">
-                        <div class="channel-avatar" style="background-color: #0057b7;"></div>
+                        <div class="channel-avatar">
+                            <img src="https://yt3.ggpht.com/aDFdZEVvq0Oh4rkvhcvZ6-afl8gRLQHQS7byHBmE7GhM9RF7RCihKzumCZLKLD4hCp7SwgMFDg=s68-c-k-c0x00ffffff-no-rj" alt="Channel Avatar">
+                        </div>
                         <div class="details">
                             <h3>Як збільшився борг України за час великої війни?</h3>
                             <p class="channel-name">Економічна правда</p>
@@ -73,11 +77,13 @@
 
                 <div class="video-card">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/320x180/333333/FFFFFF?text=LUKI" alt="Preview">
+                        <img src="https://i.ytimg.com/vi/zKoyRZ7QCSs/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLD5qW-C2FLzaM1yzsVMiSYi5ANljA" alt="Preview">
                         <span class="duration">32:08</span>
                     </div>
                     <div class="video-info">
-                        <div class="channel-avatar" style="background-color: #ffcc00;"></div>
+                        <div class="channel-avatar">
+                            <img src="https://yt3.ggpht.com/FjrivS4gSKcBvIZ96l5aWyiBJ4I-Yjss7fHJOSTHqic6OYvtN9DDuChm5hB7TNsF0YqygtMtkQ=s68-c-k-c0x00ffffff-no-rj" alt="Channel Avatar">
+                        </div>
                         <div class="details">
                             <h3>ЩО БІСИТЬ ЖУРНАЛІСТКУ | Марія Малевська</h3>
                             <p class="channel-name">LUKI</p>
@@ -88,11 +94,13 @@
 
                 <div class="video-card">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/320x180/990000/FFFFFF?text=ДЗК" alt="Preview">
+                        <img src="https://i.ytimg.com/vi/Af6r-dMy2QI/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLCROmDtGA7PAp2p68sSi70R3dfCBw" alt="Preview">
                         <span class="duration">1:06:07</span>
                     </div>
                     <div class="video-info">
-                        <div class="channel-avatar" style="background-color: #e62117;"></div>
+                        <div class="channel-avatar">
+                            <img src="https://yt3.ggpht.com/SStG6fxxt_nVaS3GpMd3UpQJtDyF8TmXGn317nDu-1aT1wamX14r2q6XlMweKh3NMDxCGXWb=s68-c-k-c0x00ffffff-no-rj" alt="Channel Avatar">
+                        </div>
                         <div class="details">
                             <h3>ВЛАД КУРАН ТА ОЛЕГ СВИЩ В ДЗК НА ВИЖИВАННЯ</h3>
                             <p class="channel-name">ЛЕВИ НА ДЖИПІ</p>
@@ -103,11 +111,13 @@
 
                 <div class="video-card">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/320x180/111111/FFFFFF?text=Янович" alt="Preview">
+                        <img src="https://i.ytimg.com/vi/zJ5pBoB9iQE/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBinsbz-5oDLCzYyV6MVzyzloH_HQ" alt="Preview">
                         <span class="duration">1:01:52</span>
                     </div>
                     <div class="video-info">
-                        <div class="channel-avatar" style="background-color: #555;"></div>
+                        <div class="channel-avatar">
+                            <img src="https://yt3.ggpht.com/5ek4rY8sc9tnpCfSUVNEC4_FAdlMj0EVeU_uaD2qJ7ejtsWRfYf4mJ1VT8jJJ7UujLamj07spsY=s68-c-k-c0x00ffffff-no-rj" alt="Channel Avatar">
+                        </div>
                         <div class="details">
                             <h3>РОМАН ЩЕРБАН В ПРОТАГОНІСТАХ: ІВАН МАЗЕПА</h3>
                             <p class="channel-name">Женя Янович</p>
@@ -116,13 +126,15 @@
                     </div>
                 </div>
                 
-                 <div class="video-card">
+                <div class="video-card">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/320x180/222222/FFFFFF?text=Geek+Journal" alt="Preview">
+                        <img src="https://i.ytimg.com/vi/LKnnv9rpTis/hq720.jpg?sqp=-oaymwEnCNAFEJQDSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLCEgUd3vc55IWBTcAIUaowTIQCVWA" alt="Preview">
                         <span class="duration">24:15</span>
                     </div>
                     <div class="video-info">
-                        <div class="channel-avatar" style="background-color: #ff4500;"></div>
+                        <div class="channel-avatar">
+                            <img src="https://yt3.ggpht.com/ytc/AIdro_nfzQCKAxpRP64l141i_9pfQ-oiEwL77ZIGSLZRbtdwxDg=s68-c-k-c0x00ffffff-no-rj" alt="Channel Avatar">
+                        </div>
                         <div class="details">
                             <h3>ЧОМУ ВСІ ФАНАТІЮТЬ ВІД ДЮНИ? Огляд фільму</h3>
                             <p class="channel-name">Geek Journal</p>
