--- a/P_8/index.html
+++ b/P_8/index.html
@@ -31,7 +31,7 @@
 
         <section id="about" class="section-about">
           <div class="profile-photo-container">
-            <img class="profile-photo" src="photo" alt="Болкун Денис">
+            <img class="profile-photo" src="photo_of_denis.jpg" alt="Болкун Денис">
           </div>
           <div class="profile-info">
             <h2>Болкун Денис</h2>
