--- a/P_7/index.html
+++ b/P_7/index.html
@@ -12,7 +12,7 @@
     <main class="postcard">
         
         <div class="postcard__header">
-            <img src="photo-christmas-wreath.jpg" 
+            <img src="christmas.jpg" 
                  alt="Святковий вінок" 
                  class="postcard__image">
         </div>
