Додав 6 роботу на головну сторінку

--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
           </div>
           <a href="P_5/index.html" class="work-button">Web& Mobile – Figma</a>
         </section>
-        
+
+        <section id="labs" class="section-work work-block-2">
+          <div class="work-text">
+            <h3>Практична робота№ 6</h3>
+            <p>Pokemon`s</p>
+          </div>
+          <a href="P_6/index.html" class="work-button">Створити свій сайт зі спрайтом Pokemon`s</a>
+        </section>
+
         <section id="labs" class="section-work work-block-2">
           <div class="work-text">
             <h3>Практична робота№ 7</h3>
@@ -87,6 +95,7 @@
           </div>
           <a href="P_7/index.html" class="work-button">Створити всі стилі з 0, враховуючи їх розміщення по BEM.</a>
         </section> 
+
         <section id="labs" class="section-work work-block-2">
           <div class="work-text">
             <h3>Практична робота№ 8</h3>
